<resources>
    <string name="app_name">TonHoaSung</string>

    <string name="lable_warning">Special Instructions \nFor questions regarding this invoice, please contact salesperson \nA 1.5% finance charge is added to all past due invoices. All software is licensed in accordance with the terms and conditions of the Sofrware License and Services agreement or the referenced GSA Shedule contact</string>

    <string name="lable_note">Please include the invoice number on all remittances and include remittances copy with postal payments</string>

    <string name="lable_director">Giám đốc \n (Ký, họ tên, đóng dấu)</string>
    <string name="lable_accountant">Kế toán trưởng \n (Ký, họ tên)</string>
    <string name="lable_receiver_money">Người nhận tiền \n (Ký, họ tên)</string>

    <string name="lable_creater">Người lập \n (Ký, họ tên)</string>
    <string name="lable_treasurer">Thủ quỹ \n (Ký, họ tên)</string>
    
    <string name="lable_introduce">Xin cảm ơn Quý khách hàng đã tin dùng sản phẩm và dịch vụ của  </string>
    <string name="lable_introduce2">Chúng tôi xin thông báo đã phát hành hóa đơn điện tử cho quý khách. </string>
    <string name="lable_notification_prefix">Quý khách vui lòng truy cập địa chỉ website portal  </string>
    <string name="lable_notification_suffixes"> để tra cứu hóa đơn của mình </string>
    <string name="lable_note_mail">Đây là mail tự động từ hệ thống. Quý khách vui lòng không trả lời mail </string>
    <string name="lable_thanks_mail">Trân trọng cảm ơn.</string>
</resources>
