<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/tv_lable_from"
        android:text="From: "
        android:textStyle="bold"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_send"
        android:text="Send: "
        android:textStyle="bold"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_from"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_to"
        android:text="To: "
        android:textStyle="bold"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_send"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_subject"
        android:text="Subject: "
        android:textStyle="bold"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_to"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_from_value"
        android:text="xxxx"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_lable_from"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_send_value"
        android:text="xxx"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_from_value"
        app:layout_constraintStart_toEndOf="@id/tv_lable_send"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_to_value"
        android:text="xxxxxx"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_send_value"
        app:layout_constraintStart_toEndOf="@id/tv_lable_to"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_subject_value"
        android:text="xxxxxxxxx "
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_to_value"
        app:layout_constraintStart_toEndOf="@id/tv_lable_subject"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_caption"
        android:text="Kính gửi Quý khách hàng! "
        android:textStyle="bold"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_subject"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_lable_introduct1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/text_view_normal_recepts"
        android:text="@string/lable_introduce"
        app:layout_constraintEnd_toStartOf="@id/tv_name_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_caption"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tv_name_company"
        android:text="Công ty X"
        android:paddingStart="4dp"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_caption"
        app:layout_constraintStart_toEndOf="@id/tv_lable_introduct1"/>

    <TextView
        android:id="@+id/tv_lable_introduct2"
        android:text="@string/lable_introduce2"
        android:layout_width="wrap_content"
        style="@style/text_view_normal_recepts"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_introduct1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/tv_lable_info_detail"
        android:text="Thông tin chi tiết hóa đơn phát hành: "
        android:layout_width="wrap_content"
        style="@style/text_view_normal_recepts"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_introduct2"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_lable_model_number"
        android:text="Mẫu số: "
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_lable_info_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_lable_notation"
        android:text="Ký hiệu: "
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_model_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_bill_number"
        android:text="Số hóa đơn: "
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_notation"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_code_search"
        android:text="Mã tra cứu: "
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_bill_number"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_model_number_value"
        android:text="xxxxx"
        android:textColor="@color/red"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_lable_info_detail"
        app:layout_constraintStart_toEndOf="@id/tv_lable_model_number"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_notation_value"
        android:text="xxxxx"
        android:textColor="@color/red"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_model_number"
        app:layout_constraintStart_toEndOf="@id/tv_lable_notation"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_bill_number_value"
        android:text="xxxxx"
        android:textColor="@color/red"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_notation"
        app:layout_constraintStart_toEndOf="@id/tv_lable_bill_number"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_code_search_value"
        android:text="xxxxxx "
        android:textColor="@color/red"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_bill_number"
        app:layout_constraintStart_toEndOf="@id/tv_lable_code_search"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/tv_lable_notification_prefix"
        android:layout_marginTop="16dp"
        android:text="@string/lable_notification_prefix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_view_normal_recepts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_code_search"/>

    <TextView
        android:id="@+id/tv_link_value"
        android:layout_marginTop="16dp"
        android:text="link"
        android:paddingStart="4dp"
        android:textColor="@color/red"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_lable_notification_prefix"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_code_search"/>

    <TextView
        android:id="@+id/tv_lable_notification_suffixes"
        android:layout_marginTop="16dp"
        android:text="@string/lable_notification_suffixes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        style="@style/text_view_normal_recepts"
        app:layout_constraintStart_toEndOf="@id/tv_link_value"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_code_search"/>

    <TextView
        android:id="@+id/tv_lable_note"
        android:layout_marginTop="16dp"
        android:text="Chú ý:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        style="@style/text_view_normal_recepts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_notification_prefix"/>

    <TextView
        android:layout_marginTop="16dp"
        android:text="@string/lable_note_mail"
        android:textStyle="bold"
        android:paddingStart="4dp"
        style="@style/text_view_normal_recepts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_lable_note"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_notification_prefix"/>

    <TextView
        android:id="@+id/tv_lable_thanks"
        android:layout_marginTop="16dp"
        android:text="@string/lable_thanks_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_view_normal_recepts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_note"/>

    <view
        android:id="@+id/line_bottom_mail"
        android:layout_marginTop="12dp"
        style="@style/line_horlizotal"
        app:layout_constraintTop_toBottomOf="@id/tv_lable_thanks"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_send_mail"
        android:text="Send mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/line_bottom_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edt_email_receive"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_email_receive"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="input email receive"
        app:layout_constraintTop_toBottomOf="@id/line_bottom_mail"
        app:layout_constraintStart_toEndOf="@id/btn_send_mail"
        app:layout_constraintEnd_toStartOf="@id/btn_print_email"/>

    <Button
        android:id="@+id/btn_print_email"
        android:text="Print"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/line_bottom_mail"
        app:layout_constraintStart_toEndOf="@id/edt_email_receive"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>